--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <a href="mailto:adiskashyap2022@gmail.com">Email: adiskashyap2022@gmail.com</a>
         <a href="tel:+918277037607">Mobile: +91 82770 37607</a>
         <a href="https://www.linkedin.com/in/adithya-s-125a3a25b" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/Adithyaskashyap" target="_blank" rel="noopener">github</a>
       </div>
     </section>
   </main>
