--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         <span class="skill">EDA</span>
         <span class="skill">Feature Engineering</span>
         <span class="skill">Visualization</span>
+        <span class="skill">Gen AI APIs</span>
+        <span class="skill">ChatGPT</span>
+        <span class="skill">Gemini</span>
+        <span class="skill">Claude AI</span>
+        <span class="skill">Machine Learning</span>
       </div>
     </section>
 
