--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
       <ul>
         <li>Drone Technology – Technobytes Technologies + IISc (Mar 2024)</li>
         <li>Google Cloud Project Fundamentals for DevOps – KSCST (Feb 2024)</li>
-        <li>Introduction to Python – Infosys Springboard (Jul 2024)</li>
-        <li>Introduction to Artificial Intelligence – Infosys Springboard (Jul 2024)</li>
+        <li>Master Generative Ai and Generative Ai Tools- Udemy (Nov 2025)</li>
+        <li>Open-source LLM’s- Udemy (Nov 2025)</li>
         <li>Introduction to Deep Learning – Infosys Springboard (Jul 2024)</li>
       </ul>
     </section>
