--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="home-text">
           <h2 id="home-heading">Hello, I’m <span>Adithya S</span></h2>
           <h3>AI & Data Science Student | Data Analytics | Power BI | Tableau | SQL | Python |Data Visualization | ETL | SDMIT Ujire</h3>
-          <a href="assets/resume.pdf" class="btn" download>Download Resume</a>
+          <a href="assets/Adithya_S_.pdf" class="btn" download>Download Resume</a>
         </div>
         <div class="home-img">
           <img src="assets/profile.jpg" alt="Profile Picture of Adithya S">
